--- a/Assests/CSS/candle.css
+++ b/Assests/CSS/candle.css
@@ -1,219 +1,216 @@
 #candleDiv {
   display: none;
-  width: 65%;
+  width: 64%;
   position: fixed;
   right: 0;
   bottom: 0;
   top: 0;
   animation: change-background 3s infinite linear;
-}
-#candleDiv.candleDivDisplay {
-  display: inherit;
-}
 
-#candleDiv .wrapper {
-  position: absolute;
-  left: 50%;
-  top: 70%;
-  transform: scale(1.5, 1.5) translate(-50%, -50%);
-}
+  .wrapper {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: scale(1.5, 1.5) translate(-50%, -50%);
+  }
 
-#candleDiv .floor {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 350px;
-  height: 5px;
-  background: #673c63;
-  transform: translate(-50%, -50%);
-  box-shadow: 0px 2px 5px #111;
-  z-index: 2;
-}
+  .floor {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 350px;
+    height: 5px;
+    background: #673c63;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 2px 5px #111;
+    z-index: 2;
+  }
 
-#candleDiv .candles {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 250px;
-  height: 150px;
-  transform: translate(-50%, -100%);
-  z-index: 1;
-}
+  .candles {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 250px;
+    height: 150px;
+    transform: translate(-50%, -100%);
+    z-index: 1;
+  }
 
-#candleDiv .candle1 {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 35px;
-  height: 100px;
-  background: #fff;
-  border: 3px solid #673c63;
-  border-bottom: 0px;
-  border-radius: 3px;
-  transform-origin: center right;
-  transform: translate(60%, -25%);
-  box-shadow: -2px 0px 0px #95c6f2 inset;
-  animation: expand-body 3s infinite linear;
-}
+  .candle1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 35px;
+    height: 100px;
+    background: #fff;
+    border: 3px solid #673c63;
+    border-bottom: 0px;
+    border-radius: 3px;
+    transform-origin: center right;
+    transform: translate(60%, -25%);
+    box-shadow: -2px 0px 0px #95c6f2 inset;
+    animation: expand-body 3s infinite linear;
+  }
 
-#candleDiv .candle1__stick,
-#candleDiv .candle2__stick {
-  position: absolute;
-  left: 50%;
-  top: 0%;
-  width: 3px;
-  height: 15px;
-  background: #673c63;
-  border-radius: 8px;
-  transform: translate(-50%, -100%);
-}
+  .candle1__stick,
+  .candle2__stick {
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    width: 3px;
+    height: 15px;
+    background: #673c63;
+    border-radius: 8px;
+    transform: translate(-50%, -100%);
+  }
 
-#candleDiv .candle2__stick {
-  height: 12px;
-  transform-origin: bottom center;
-  animation: stick-animation 3s infinite linear;
-}
+  .candle2__stick {
+    height: 12px;
+    transform-origin: bottom center;
+    animation: stick-animation 3s infinite linear;
+  }
 
-#candleDiv .candle1__eyes,
-#candleDiv .candle2__eyes {
-  position: absolute;
-  left: 50%;
-  top: 0%;
-  width: 35px;
-  height: 30px;
-  transform: translate(-50%, 0%);
-}
+  .candle1__eyes,
+  .candle2__eyes {
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    width: 35px;
+    height: 30px;
+    transform: translate(-50%, 0%);
+  }
 
-#candleDiv .candle1__eyes-one {
-  position: absolute;
-  left: 30%;
-  top: 20%;
-  width: 5px;
-  height: 5px;
-  border-radius: 100%;
-  background: #673c63;
-  transform: translate(-70%, 0%);
-  animation: blink-eyes 3s infinite linear;
-}
+  .candle1__eyes-one {
+    position: absolute;
+    left: 30%;
+    top: 20%;
+    width: 5px;
+    height: 5px;
+    border-radius: 100%;
+    background: #673c63;
+    transform: translate(-70%, 0%);
+    animation: blink-eyes 3s infinite linear;
+  }
 
-#candleDiv .candle1__eyes-two {
-  position: absolute;
-  left: 70%;
-  top: 20%;
-  width: 5px;
-  height: 5px;
-  border-radius: 100%;
-  background: #673c63;
-  transform: translate(-70%, 0%);
-  animation: blink-eyes 3s infinite linear;
-}
+  .candle1__eyes-two {
+    position: absolute;
+    left: 70%;
+    top: 20%;
+    width: 5px;
+    height: 5px;
+    border-radius: 100%;
+    background: #673c63;
+    transform: translate(-70%, 0%);
+    animation: blink-eyes 3s infinite linear;
+  }
 
-#candleDiv .candle1__mouth {
-  position: absolute;
-  left: 40%;
-  top: 20%;
-  width: 0px;
-  height: 0px;
-  border-radius: 20px;
-  background: #673c63;
-  transform: translate(-50%, -50%);
-  animation: uff 3s infinite linear;
-}
+  .candle1__mouth {
+    position: absolute;
+    left: 40%;
+    top: 20%;
+    width: 0px;
+    height: 0px;
+    border-radius: 20px;
+    background: #673c63;
+    transform: translate(-50%, -50%);
+    animation: uff 3s infinite linear;
+  }
 
-#candleDiv .candle__smoke-one {
-  position: absolute;
-  left: 30%;
-  top: 50%;
-  width: 30px;
-  height: 3px;
-  background: grey;
-  transform: translate(-50%, -50%);
-  animation: move-left 3s infinite linear;
-}
+  .candle__smoke-one {
+    position: absolute;
+    left: 30%;
+    top: 50%;
+    width: 30px;
+    height: 3px;
+    background: grey;
+    transform: translate(-50%, -50%);
+    animation: move-left 3s infinite linear;
+  }
 
-#candleDiv .candle__smoke-two {
-  position: absolute;
-  left: 30%;
-  top: 40%;
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  background: grey;
-  transform: translate(-50%, -50%);
-  animation: move-top 3s infinite linear;
-}
+  .candle__smoke-two {
+    position: absolute;
+    left: 30%;
+    top: 40%;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background: grey;
+    transform: translate(-50%, -50%);
+    animation: move-top 3s infinite linear;
+  }
 
-#candleDiv .candle2 {
-  position: absolute;
-  left: 20%;
-  top: 65%;
-  width: 42px;
-  height: 60px;
-  background: #fff;
-  border: 3px solid #673c63;
-  border-bottom: 0px;
-  border-radius: 3px;
-  transform: translate(60%, -15%);
-  transform-origin: center right;
-  box-shadow: -2px 0px 0px #95c6f2 inset;
-  animation: shake-left 3s infinite linear;
-}
+  .candle2 {
+    position: absolute;
+    left: 20%;
+    top: 65%;
+    width: 42px;
+    height: 60px;
+    background: #fff;
+    border: 3px solid #673c63;
+    border-bottom: 0px;
+    border-radius: 3px;
+    transform: translate(60%, -15%);
+    transform-origin: center right;
+    box-shadow: -2px 0px 0px #95c6f2 inset;
+    animation: shake-left 3s infinite linear;
+  }
 
-#candleDiv .candle2__eyes-one {
-  position: absolute;
-  left: 30%;
-  top: 50%;
-  width: 5px;
-  height: 5px;
-  display: inline-block;
-  border: 0px solid #673c63;
-  border-radius: 100%;
+  .candle2__eyes-one {
+    position: absolute;
+    left: 30%;
+    top: 50%;
+    width: 5px;
+    height: 5px;
+    display: inline-block;
+    border: 0px solid #673c63;
+    border-radius: 100%;
 
-  background: #673c63;
-  transform: translate(-80%, 0%);
-  animation: changeto-lower 3s infinite linear;
-}
+    background: #673c63;
+    transform: translate(-80%, 0%);
+    animation: changeto-lower 3s infinite linear;
+  }
 
-#candleDiv .candle2__eyes-two {
-  position: absolute;
-  left: 70%;
-  top: 50%;
-  width: 5px;
-  height: 5px;
-  display: inline-block;
-  border: 0px solid #673c63;
-  border-radius: 100%;
+  .candle2__eyes-two {
+    position: absolute;
+    left: 70%;
+    top: 50%;
+    width: 5px;
+    height: 5px;
+    display: inline-block;
+    border: 0px solid #673c63;
+    border-radius: 100%;
 
-  background: #673c63;
-  transform: translate(-80%, 0%);
-  animation: changeto-greater 3s infinite linear;
-}
+    background: #673c63;
+    transform: translate(-80%, 0%);
+    animation: changeto-greater 3s infinite linear;
+  }
 
-#candleDiv .light__wave {
-  position: absolute;
-  top: 35%;
-  left: 35%;
-  width: 75px;
-  height: 75px;
-  border-radius: 100%;
-  z-index: 0;
-  transform: translate(-25%, -50%) scale(2.5, 2.5);
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  animation: expand-light 3s infinite linear;
-}
+  .light__wave {
+    position: absolute;
+    top: 35%;
+    left: 35%;
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    z-index: 0;
+    transform: translate(-25%, -50%) scale(2.5, 2.5);
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    animation: expand-light 3s infinite linear;
+  }
 
-#candleDiv .candle2__fire {
-  position: absolute;
-  top: 50%;
-  left: 40%;
-  display: block;
-  width: 16px;
-  height: 20px;
-  background-color: red;
-  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-  background: #ff9800;
-  transform: translate(-50%, -50%);
-  animation: dance-fire 3s infinite linear;
+  .candle2__fire {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    display: block;
+    width: 16px;
+    height: 20px;
+    background-color: red;
+    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+    background: #ff9800;
+    transform: translate(-50%, -50%);
+    animation: dance-fire 3s infinite linear;
+  }
 }
 
 @keyframes blink-eyes {
