--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -21,14 +21,13 @@
 }
 
 #leftContent .box {
-  top: 8%;
-  left: 15%;
+  border: 1px solid rgba(255, 255, 255, 0.6);
   animation-name: animateBox;
 }
 
 #leftContent .box2 {
-  top: 13%;
-  left: 20%;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+
   animation-name: animateBox2;
 }
 
