--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -470,6 +470,7 @@
   left: 0;
   width: 100vw;
   z-index: 8;
+  border-bottom:1px solid rgb(128, 128, 128,.5);
   background: url("http://assets.iceable.com/img/noise-transparent.png") repeat 0 0;
   background-color: rgba(29, 29, 29, 0.7);
 
