--- a/Assests/CSS/bottomContent.css
+++ b/Assests/CSS/bottomContent.css
@@ -317,13 +317,12 @@
 
 /* Footer  */
 .footer {
-  margin-top: 5%;
-  font-size: 2.3vw;
+  text-align: center;
+  margin-top: 10vh;
   color: #838788;
 }
 .footer a,
 #projects .headings a {
-  padding-bottom: 0.7%;
   color: #ddd !important;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
