--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -477,7 +477,7 @@
 #pageNav .navUl li {
   display: inline-block;
   margin-right: 5vw;
-  font-family: "Caprasimo", cursive;
+  font-family: 'Russo One';
   font-size: x-large;
   letter-spacing: 2px;
 
