--- a/Assests/CSS/bottomContent.css
+++ b/Assests/CSS/bottomContent.css
@@ -344,7 +344,7 @@
 
 @media only screen and (min-width: 1000px) {
   #bottomContainer {
-    padding: 0 2vw 4vh 2vw;
+    padding: 0 2vw ;
   }
   #bottomContainer .content {
     padding: 10vh 2vw 3vh 2vw;
