--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -154,7 +154,7 @@
   margin-bottom: 10%;
 }
 #rightContent .skillSet {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   text-align: center;
@@ -163,8 +163,8 @@
 }
 
 #rightContent .skillSet .col {
-  width: 25%;
-  margin: 2% 4% 2% 4%;
+  width: 20%;
+  margin: 2%;
 }
 #rightContent .skillSet .item-name {
   margin: 10px;
@@ -176,8 +176,8 @@
   position: relative;
   box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.2);
 }
-#rightContent .skills .item h5 {
-  font-size: 1.5vw;
+#rightContent .skills .item img{
+  border-radius: 5px;
 }
 #rightContent .skills .item:hover {
   box-shadow: 0px 0px 7px #9575de;
