--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -332,7 +332,7 @@
   margin: auto;
 }
 #resume p {
-  font-size: 1vw;
+  font-size: large;
   color: #888;
   font-weight: bolder;
   text-transform: uppercase;
