--- a/Assests/CSS/extraStyle.css
+++ b/Assests/CSS/extraStyle.css
@@ -138,7 +138,7 @@ li {
 
 #navbar li {
   padding-bottom: 3vh;
-  font-family: "Bagel Fat One", cursive;
+font-weight: 800;
   padding-left: 45%;
   font-size: xx-large;
   letter-spacing: 2px;
@@ -196,8 +196,8 @@ li {
   text-align: center;
   margin-bottom: 3vh;
   border-radius: 100%;
-  width: 2vw;
-  height: 2vw;
+  width: 3vw;
+  height: 3vw;
   padding: 0 !important;
 }
 
@@ -226,7 +226,7 @@ li {
 }
 
 #switchColor .open {
-  bottom: 8%;
+  bottom: 15%;
 }
 
 #switchColor i {
