--- a/Assests/CSS/moreStyle.css
+++ b/Assests/CSS/moreStyle.css
@@ -521,17 +521,78 @@ li {
   align-items: center;
 }
 
-.pl {
-  display: block;
-  width: 6.25em;
-  height: 6.25em;
+.loader {
+  width: 16em;
+  height: 8em;
+  position: relative;
+  overflow: hidden;
 }
-.pl__ring,
-.pl__ball {
-  animation: ring 2s ease-out infinite;
+
+.loader::before,
+.loader::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
 }
-.pl__ball {
-  animation-name: ball;
+
+.loader::before {
+  width: inherit;
+  height: 0.3em;
+  background-color: #cdf5fd;
+}
+
+.loader::after {
+  box-sizing: border-box;
+  width: 50%;
+  height: inherit;
+  border: 0.3em solid #cdf5fd;
+  border-radius: 50%;
+  left: 25%;
+}
+
+.loader span {
+  position: absolute;
+  width: 5%;
+  height: 10%;
+  background-color: #cdf5fd;
+  border-radius: 50%;
+  bottom: 0.3em;
+  left: -5%;
+  animation: 2s linear infinite;
+  transform-origin: 50% -3em;
+  animation-name: run, rotating;
+}
+
+.loader span:nth-child(2) {
+  animation-delay: 0.075s;
+}
+.loader span:nth-child(3) {
+  animation-delay: 0.15s;
+}
+
+@keyframes run {
+  0% {
+    left: -5%;
+  }
+  10%,
+  60% {
+    left: calc((100% - 5%) / 2);
+  }
+  70%,
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes rotating {
+  0%,
+  10% {
+    transform: rotate(0deg);
+  }
+  60%,
+  100% {
+    transform: rotate(-1turn);
+  }
 }
 
 /* Animation */
