--- a/Assests/CSS/topContent.css
+++ b/Assests/CSS/topContent.css
@@ -475,6 +475,7 @@
   background: url("http://assets.iceable.com/img/noise-transparent.png") repeat
     0 0;
   background-color: rgba(29, 29, 29, 0.7);
+  backdrop-filter: blur(5px);
 }
 
 #pageNav .navUl {
