--- a/Assests/CSS/Body.css
+++ b/Assests/CSS/Body.css
@@ -36,6 +36,19 @@ body:after {
   z-index: -1;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 #Background-Effect {
   position: fixed;
   top: -50%;
