--- a/Assests/CSS/TopSection.css
+++ b/Assests/CSS/TopSection.css
@@ -379,6 +379,10 @@
 
 #Skills .skill img {
   border-radius: 5px;
+  height: 40px;
+}
+#Skills .skill h5 {
+  margin: 20px auto;
 }
 
 #Skills .skill:hover {
