--- a/Assests/CSS/Navbar.css
+++ b/Assests/CSS/Navbar.css
@@ -7,6 +7,7 @@ nav {
   left: 0;
   z-index: 100;
   backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
   border-bottom: 1px solid #cccccc14;
   min-height: 50px;
   display: flex;
