--- a/Assests/CSS/TopSection.css
+++ b/Assests/CSS/TopSection.css
@@ -52,7 +52,7 @@
   margin: 7% auto 0;
   width: 90%;
   font-weight: 900;
-  font-family: cursive;
+  font-family: "Patrick Hand SC", cursive;
   font-size: x-large;
   text-align: center;
   position: relative;
@@ -283,7 +283,7 @@
   padding: 5px;
   border-radius: 10px;
   font-weight: bold;
-  font-family: cursive;
+  font-family: "Patrick Hand SC", cursive;
   position: relative;
   background-color: #c4dfdf;
 }
