--- a/Assests/CSS/ProjectsPopUp.css
+++ b/Assests/CSS/ProjectsPopUp.css
@@ -70,7 +70,9 @@
 #ProjectsPopUp .card img {
   height: 200px;
   background-size: cover;
-  margin: auto;
+  margin: auto 0;
+  min-width: 230px;
+  max-width: 230px;
 }
 
 #ProjectsPopUp .cardData h3 {
