--- a/Assests/CSS/ProjectsPopUp.css
+++ b/Assests/CSS/ProjectsPopUp.css
@@ -8,7 +8,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  padding: 5rem;
+  padding: 2rem 5rem;
   margin: auto;
   display: none;
   overflow: auto;
