--- a/Assets/CSS/ProjectsPopUp.css
+++ b/Assets/CSS/ProjectsPopUp.css
@@ -170,10 +170,23 @@
   #ProjectPopUp .projectCards {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  #ProjectPopUp {
+    padding: 2rem;
+    .content {
+      padding: 12px 20px;
+    }
+  }
 }
 
 @media (max-width: 700px) {
   #ProjectPopUp .projectCards {
     grid-template-columns: repeat(1, 1fr);
+  }
+  #ProjectPopUp {
+    padding: 1rem;
+    .content {
+      padding: 12px;
+    }
   }
 }
